src/objects/Hotel_wing_code__x.object
<CustomObject>
    <description>caesars$hotel_wing_code</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$hotel_wing_code</externalName>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>caesars$hotel_wing_code</relationshipLabel>
        <relationshipName>caesars_hotel_wing_code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_wing_cd__c</fullName>
        <description>c_wing_cd</description>
        <externalDeveloperName>c_wing_cd</externalDeveloperName>
        <label>c_wing_cd</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_wing_desc__c</fullName>
        <description>c_wing_desc</description>
        <externalDeveloperName>c_wing_desc</externalDeveloperName>
        <label>c_wing_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hotel Wing Code</label>
    <pluralLabel>caesars$hotel_wing_code</pluralLabel>
</CustomObject>